--- a/css/sanitize.css
+++ b/css/sanitize.css
@@ -59,9 +59,8 @@ body {
  * `article` contexts in Chrome, Edge, Firefox, and Safari.
  */
 
-h1 {
-  font-size: 2em;
-  margin: 0.67em 0;
+h1 h2 h3 h4 h5 {
+  margin: 0;
 }
 
 /* Grouping content
