--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,10 @@
+* {
+  font-family: "M PLUS 1", sans-serif;
+}
+
 html body {
   height: 100vh;
-  width: 100vh;
+  width: 100%;
 }
 
 a {
@@ -9,5 +13,33 @@ a {
   color: black;
 }
 
+h1 h2 h3 {
+  color: #fff;
+}
+
+.l-header {
+  width: 100%;
+  height: 300px;
+  background-color: #77CCF0;
+  margin: 0;
+}
+
+.l-footer {
+  width: 100%;
+  height: 200px;
+  background-color: #77CCF0;
+}
+
+.l-main {
+  height: 100vh;
+}
+
+.c-text {
+  color: #fff;
+}
+
 /*Foundation*/
+/*layout*/
+/*object*/
+/*component*/
 /*# sourceMappingURL=style.css.map */
