--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -3,9 +3,8 @@
 @use "../foundation/mixin" as m;
 @use "../foundation/variable" as v;
 
-.l-header {
+.l-footer {
     width: 100%;
-    height: 300px;
+    height: 200px;
     background-color: #77CCF0;
-    margin: 0;
 }
