--- a/sass/style.scss
+++ b/sass/style.scss
@@ -13,11 +13,16 @@
 
 
 
-
-
 /*object*/
 
 /*component*/
 @use "object/component/text";
-// @use "object/project/";
+
+
+
+/*project*/
+@use "object/project/front";
+@use "object/project/title";
+
+
 // @use "object/utility/";
