--- a/css/style.css
+++ b/css/style.css
@@ -13,20 +13,17 @@ a {
   color: black;
 }
 
-h1 h2 h3 {
-  color: #fff;
-}
-
 .l-header {
   width: 100%;
   height: 300px;
   background-color: #77CCF0;
   margin: 0;
+  display: inline-block;
 }
 
 .l-footer {
   width: 100%;
-  height: 200px;
+  height: 100px;
   background-color: #77CCF0;
 }
 
@@ -36,11 +33,36 @@ h1 h2 h3 {
 
 .c-text {
   color: #fff;
-  margin: 0;
+}
+.c-text--top {
+  font-size: 24px;
+}
+.c-text--tel {
+  font-size: 15px;
+  padding: 5px 15px 0 200px;
+}
+.c-text--sub {
+  font-size: 12px;
+  padding: 0 0 0 125px;
+}
+
+.p-front__title {
+  font-size: 24px;
+  padding: 20px;
+}
+.p-front__top {
+  background-image: url(/img/top.png);
+  background-size: cover;
+  height: 301.44px;
+}
+
+.p-title {
+  padding: 55px 0 0 20px;
 }
 
 /*Foundation*/
 /*layout*/
 /*object*/
 /*component*/
+/*project*/
 /*# sourceMappingURL=style.css.map */
