--- a/sass/layout/_sidebar.scss
+++ b/sass/layout/_sidebar.scss
@@ -3,8 +3,8 @@
 @use "../foundation/mixin" as m;
 @use "../foundation/variable" as v;
 
-.l-footer {
-    width: 100%;
-    height: 100px;
-    background-color: #77CCF0;
+
+
+.l-sidebar {
+    
 }
