--- a/sass/foundation/_base.scss
+++ b/sass/foundation/_base.scss
@@ -2,18 +2,26 @@
 
 *{
     font-family: 'M PLUS 1', sans-serif;
-
+    min-width:390px;
 
 }
 
 
-html body {
+html , body {
     height: 100vh;
     width: 100%
+    
 }
 
 a {
-    text-emphasis: none;
+    text-decoration: none;
     color: black;
 }
 
+li {
+    list-style: none;
+}
+
+ul {
+    list-style: none;
+}
