--- a/sass/foundation/_variable.scss
+++ b/sass/foundation/_variable.scss
@@ -1,1 +1,17 @@
 @charset "UTF-8";
+
+
+// カラー指定
+$bs:  #1B435D;
+$back-color: #FFF7EF;
+$card-box: #dad3ce;
+$main: #6ebdfd;
+
+
+
+
+// フォント指定
+$roboto: 'Roboto', sans-serif;
+
+//フォントサイズ
+$font20: 20px;
