--- a/sass/style.scss
+++ b/sass/style.scss
@@ -20,9 +20,11 @@
 
 
 
+
 /*project*/
 @use "object/project/front";
 @use "object/project/title";
+@use "object/project/box";
 
 
 // @use "object/utility/";
