--- a/sass/object/component/_text.scss
+++ b/sass/object/component/_text.scss
@@ -9,13 +9,16 @@
 
 .c-text {
     color: #fff;
+    display: inline;
 
     &--top{
         font-size: 24px;
+        
     }
     &--tel {
         font-size: 15px;
         padding: 5px 15px 0 170px
+
     }
     &--sub{
         font-size: 12px;
