--- a/css/style.css
+++ b/css/style.css
@@ -3,8 +3,12 @@
   min-width: 390px;
 }
 
-html, body {
+html {
   height: 100vh;
+  width: 100%;
+}
+
+body {
   width: 100%;
 }
 
@@ -21,7 +25,12 @@ ul {
   list-style: none;
 }
 
+p {
+  box-sizing: border-box;
+}
+
 .l-header {
+  width: 100%;
   height: 300px;
   background-color: #1B435D;
   margin: 0;
@@ -32,14 +41,85 @@ ul {
   width: 100%;
   height: 100px;
   background-color: #1B435D;
+  position: absolute;
+  bottom: 0;
 }
 
 .l-main {
   height: 100vh;
 }
 
+.p-front__title {
+  font-size: 24px;
+  padding: 20px;
+}
+.p-front__top {
+  background-image: url(/img/top.png);
+  background-size: cover;
+  background-position: center center;
+  height: 301.44px;
+}
+@media screen and (min-width: 835px) {
+  .p-front__top {
+    height: 350px;
+  }
+}
+
+.p-title {
+  margin: 60px 0 0 17px;
+  display: inline;
+}
+
+.p-box {
+  height: 23%;
+  width: 80%;
+  background-color: #78BBE6;
+  margin: 0 auto;
+}
+.p-box--news {
+  padding: 0.6rem;
+  margin: 0 auto;
+}
+.p-box--news__group {
+  padding: 0.7rem;
+  box-sizing: border-box;
+  font-size: 10px;
+}
+.p-box--menu {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.p-box--menu__open {
+  background-image: url(/img/open.png);
+  background-size: cover;
+  background-position: center center;
+  height: 284.21px;
+  width: 350px;
+}
+@media screen and (min-width: 835px) {
+  .p-box--menu__open {
+    height: 308px;
+    width: 710px;
+  }
+}
+.p-box--menu__support {
+  background-image: url(/img/support.png);
+  background-size: cover;
+  background-position: center center;
+  height: 284.21px;
+  width: 350px;
+}
+@media screen and (min-width: 835px) {
+  .p-box--menu__support {
+    height: 308px;
+    width: 710px;
+  }
+}
+
 .c-text {
   color: #fff;
+  display: inline;
 }
 .c-text--top {
   font-size: 24px;
@@ -53,36 +133,30 @@ ul {
   padding: 0 0 0 125px;
 }
 
-.p-front__title {
-  font-size: 24px;
+.c-wrapper {
+  width: 100%;
+  position: relative;
+  min-height: 100vh;
+  box-sizing: border-box;
+  padding-bottom: 100px;
+}
+
+.u-padding10 {
+  padding: 10px;
+}
+
+.u-padding20 {
   padding: 20px;
 }
-.p-front__top {
-  background-image: url(/img/top.png);
-  background-size: cover;
-  height: 301.44px;
-}
 
-.p-title {
-  padding: 55px 0 0 20px;
-}
-
-.p-box {
-  height: 23%;
-  width: 80%;
-  background-color: #EEF9FF;
-}
-.p-box--news {
-  padding: 0.6rem;
-  margin: 0 auto;
-}
-.p-box--news__group {
-  padding: 0.2rem;
+.u-margin20 {
+  margin: 20px;
 }
 
 /*Foundation*/
 /*layout*/
 /*object*/
-/*component*/
 /*project*/
+/*component*/
+/*utility*/
 /*# sourceMappingURL=style.css.map */
