--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -4,7 +4,7 @@
 @use "../foundation/variable" as v;
 
 .l-header {
-    // width: 100%;
+    width: 100%;
     height: 300px;
     // background-color: #77CCF0;
     background-color:v.$bs;
