--- a/sass/object/project/_box.scss
+++ b/sass/object/project/_box.scss
@@ -7,14 +7,48 @@
 .p-box {
     height: 23%;
     width: 80%;
-    background-color: #EEF9FF;
+    background-color: #78BBE6;
+    margin: 0 auto;
+    @include m.mq(tab) {
+    }
+
 
     &--news {
         padding: 0.6rem;
         margin:  0 auto;
         &__group {
-            padding: 0.2rem;
-        }
+            padding: 0.7rem;
+            box-sizing: border-box;
+            font-size: 10px;
+            }
     }
     
+    &--menu{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        &__open{ 
+                background-image: url(/img/open.png);
+                background-size: cover;
+                background-position: center center;
+                height: 284.21px;
+                width: 350px;
+                @include m.mq(tab) {
+                    height: 308px;
+                    width: 710px;
+                }
+        }
+        &__support {
+                background-image: url(/img/support.png);
+                background-size: cover;
+                background-position: center center;
+                height: 284.21px;
+                width: 350px;
+                @include m.mq(tab) {
+                    height: 308px;
+                    width: 710px;
+                }
+        }
+    }
+
 }
