--- a/sass/object/project/_front.scss
+++ b/sass/object/project/_front.scss
@@ -14,6 +14,10 @@
     &__top  
             {background-image: url(/img/top.png);
             background-size: cover;
+            background-position: center center;
             height: 301.44px;
+            @include m.mq(tab) {
+                        height: 350px;
+    }
 }
 }
