--- a/sass/object/utility/_margin20.scss
+++ b/sass/object/utility/_margin20.scss
@@ -4,10 +4,6 @@
 @use "../../foundation/variable" as v;
 
 
-
-
-.p-title { 
-        margin: 60px 0 0 17px;
-        display:inline
-
+.u-margin20 {
+    margin: 20px;
 }
