--- a/sass/object/utility/_padding10.scss
+++ b/sass/object/utility/_padding10.scss
@@ -3,11 +3,6 @@
 @use "../../foundation/mixin" as m;
 @use "../../foundation/variable" as v;
 
-
-
-
-.p-title { 
-        margin: 60px 0 0 17px;
-        display:inline
-
+.u-padding10 {
+    padding: 10px;
 }
