--- a/sass/object/project/_box.scss
+++ b/sass/object/project/_box.scss
@@ -5,20 +5,32 @@
 
 
 .p-box {
-    height: 23%;
-    width: 80%;
+    // height: 23%;
+    // width: 80%;
     background-color: #78BBE6;
     margin: 0 auto;
     @include m.mq(tab) {
+
     }
 
 
     &--news {
         padding: 0.6rem;
         margin:  0 auto;
+        width: 350px;
+        @include m.mq(tab) {
+            height: 300px;
+            width: 710px;
+            @include m.mq(pc) {
+                height: 350px;
+                width: 1200px;
+        }
+        }
+        
         &__group {
             padding: 0.7rem;
             box-sizing: border-box;
+            display: inline;
             font-size: 10px;
             }
     }
@@ -36,6 +48,10 @@
                 @include m.mq(tab) {
                     height: 308px;
                     width: 710px;
+                    @include m.mq(pc) {
+                        height: 350px;
+                        width: 1200px;
+                }
                 }
         }
         &__support {
@@ -47,6 +63,10 @@
                 @include m.mq(tab) {
                     height: 308px;
                     width: 710px;
+                    @include m.mq(pc) {
+                        height: 350px;
+                        width: 1200px;
+                }
                 }
         }
     }
