--- a/sass/style.scss
+++ b/sass/style.scss
@@ -20,10 +20,12 @@
 @use "object/project/front";
 @use "object/project/title";
 @use "object/project/box";
+@use "object/project/p-footer";
 
 /*component*/
 @use "object/component/text";
 @use "object/component/wrapper";
+@use "object/component/button";
 
 /*utility*/
 @use "object/utility/padding10";
