--- a/sass/object/component/_line.scss
+++ b/sass/object/component/_line.scss
@@ -3,7 +3,9 @@
 @use "../../foundation/mixin" as m;
 @use "../../foundation/variable" as v;
 
-.c-button {
-    height: 80px;
-    width: 80px;
+
+
+.c-line {
+    height: 5px;
+    width: 70px;
 }
