--- a/sass/style.scss
+++ b/sass/style.scss
@@ -26,6 +26,7 @@
 @use "object/component/text";
 @use "object/component/wrapper";
 @use "object/component/button";
+@use "object/component/line";
 
 /*utility*/
 @use "object/utility/padding10";
