--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@ body {
 a {
   text-decoration: none;
   color: black;
+  display: block;
 }
 
 li {
@@ -46,7 +47,7 @@ p {
 }
 
 .l-main {
-  height: 100vh;
+  width: 100%;
 }
 
 .p-front__title {
@@ -71,8 +72,8 @@ p {
 }
 
 .p-box {
-  background-color: #78BBE6;
-  margin: 0 auto;
+  width: 350px;
+  background-color: #D5EEFF;
 }
 .p-box--news {
   padding: 0.6rem;
@@ -171,8 +172,13 @@ p {
 }
 
 .c-button {
-  height: 50px;
-  width: 50px;
+  height: 80px;
+  width: 80px;
+}
+
+.c-line {
+  height: 5px;
+  width: 70px;
 }
 
 .u-padding10 {
