--- a/sass/object/project/_box.scss
+++ b/sass/object/project/_box.scss
@@ -6,9 +6,11 @@
 
 .p-box {
     // height: 23%;
-    // width: 80%;
-    background-color: #78BBE6;
-    margin: 0 auto;
+    width: 350px;
+    background-color: #D5EEFF;
+    // display: grid;
+    // grid-template-rows: 1fr 3fr 1fr;
+    // margin: 0 20px;
     @include m.mq(tab) {
 
     }
