--- a/sass/object/project/_box.scss
+++ b/sass/object/project/_box.scss
@@ -6,7 +6,7 @@
 
 .p-box {
     // height: 23%;
-    width: 350px;
+    // width: 350px;
     background-color: #D5EEFF;
     // display: grid;
     // grid-template-rows: 1fr 3fr 1fr;
