--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ p {
 
 .l-header {
   width: 100%;
-  height: 300px;
+  height: 200px;
   background-color: #1B435D;
   margin: 0;
   display: inline-block;
@@ -51,6 +51,7 @@ p {
 }
 
 .p-front__title {
+  display: flex;
   font-size: 24px;
   padding: 20px;
 }
@@ -148,7 +149,6 @@ p {
 
 .c-text {
   color: #fff;
-  display: inline;
 }
 .c-text--top {
   font-size: 24px;
@@ -173,6 +173,7 @@ p {
 .c-button {
   height: 80px;
   width: 80px;
+  position: fixed;
 }
 
 .c-line {
