--- a/sass/object/component/_button.scss
+++ b/sass/object/component/_button.scss
@@ -4,9 +4,16 @@
 @use "../../foundation/variable" as v;
 
 .c-button {
-    height: 80px;
-    width: 80px;
+    height: 70px;
+    width: 70px;
     position: fixed;
     top: 28px;
     right: 0;
-}
+    &__br   :nth-child(1) {
+        }
+            :nth-child(2) {
+            margin: 15px 0 15px 0;
+            }
+            :nth-child(3) {
+            }
+    }
