--- a/sass/object/project/_title.scss
+++ b/sass/object/project/_title.scss
@@ -7,7 +7,8 @@
 
 
 .p-title { 
-        margin: 60px 0 0 17px;
-        display:inline
+        margin: 20px 0 0 17px;
+        display: flex;
+        flex-direction: column;
 
 }
