--- a/sass/style.scss
+++ b/sass/style.scss
@@ -21,6 +21,7 @@
 @use "object/project/title";
 @use "object/project/box";
 @use "object/project/p-footer";
+@use "object/project/menu";
 
 /*component*/
 @use "object/component/text";
