--- a/sass/object/component/_button.scss
+++ b/sass/object/component/_button.scss
@@ -16,5 +16,10 @@
             }
             :nth-child(3) {
             }
-            
-    }
+
+
+            @include m.mq(pc) {
+                display: none;
+        }
+        }
+    
