--- a/sass/object/component/_line.scss
+++ b/sass/object/component/_line.scss
@@ -10,4 +10,23 @@
     background-color:#fff;
     display:block;
     position: relative;
+    
+        .open :nth-of-type(1){
+            transform: rotate(-45deg);
+            }
+            :nth-child(2){
+            display: none;
+            }
+            :nth-of-type(3) {
+            transform: rotate(45deg);
+            }
+
+
+
+            @include m.mq(pc) {
+                display: none;
+            
+        }
+
+
 }
