--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -9,5 +9,6 @@
     // background-color: #77CCF0;
     background-color:v.$bs;
     margin: 0;
-    display: inline-block;
+    display: flex;
+    
 }
