--- a/sass/layout/_sidebar.scss
+++ b/sass/layout/_sidebar.scss
@@ -6,8 +6,15 @@
 
 
 .l-sidebar {
-    display: flex;
-    position: relative;
-    height: 100vh;
-    width: 100%;
+    position: absolute;
+    height: 100%;
+    width: 30%;
+    z-index: 1000;
+    top:0;
+    
+    &.nav {
+        right: 0;
+        transition: all 0.6s;
+        background-color: #D5EEFF;
+    }
 }
