--- a/css/style.css
+++ b/css/style.css
@@ -3,12 +3,10 @@
 }
 
 html {
-  height: 100vh;
   width: 100%;
 }
 
 body {
-  width: 100%;
   min-width: 390px;
   min-height: 100%;
 }
@@ -57,11 +55,13 @@ p {
   width: 30%;
   z-index: 1000;
   top: 0;
+  right: 0;
+  transition: all 0.6s;
 }
 .l-sidebar.nav {
   right: 0;
   transition: all 0.6s;
-  background-color: #D5EEFF;
+  background-color: #F99F48;
 }
 
 .p-front__title {
@@ -78,6 +78,11 @@ p {
 @media screen and (min-width: 805px) {
   .p-front__top {
     height: 350px;
+  }
+}
+@media screen and (min-width: 805px) and (min-width: 1162px) {
+  .p-front__top {
+    height: 500px;
   }
 }
 
@@ -119,7 +124,7 @@ p {
   align-items: center;
 }
 .p-box--menu__open {
-  background-image: url(/img/open.png);
+  background-image: url(/img/open-sp.png);
   background-size: cover;
   background-position: center center;
   height: 284.21px;
@@ -133,6 +138,7 @@ p {
 }
 @media screen and (min-width: 805px) and (min-width: 1162px) {
   .p-box--menu__open {
+    background-image: url(/img/open.png);
     height: 350px;
     width: 1200px;
   }
@@ -170,14 +176,18 @@ p {
   position: absolute;
   top: 10%;
   right: 8%;
+  transition: all 0.6;
 }
 @media screen and (min-width: 1162px) {
   .p-menu {
     display: flex;
     top: 6%;
-    left: 60%;
+    right: 40%;
     font-size: 32px;
     position: absolute;
+    width: -webkit-max-content;
+    width: -moz-max-content;
+    width: max-content;
   }
 }
 
@@ -209,6 +219,7 @@ p {
 @media screen and (min-width: 1162px) {
   .c-text--tel {
     font-size: 40px;
+    padding: 7px 15px 0 120px;
   }
 }
 .c-text--sub {
@@ -246,10 +257,8 @@ p {
 .c-button :nth-child(2) {
   margin: 15px 0 15px 0;
 }
-@media screen and (min-width: 1162px) {
-  .c-button {
-    display: none;
-  }
+.c-button.open {
+  transform: rotate(90deg);
 }
 
 .c-line {
@@ -257,15 +266,6 @@ p {
   background-color: #fff;
   display: block;
   position: relative;
-}
-.c-line .open :nth-of-type(1) {
-  transform: rotate(-45deg);
-}
-.c-line :nth-child(2) {
-  display: none;
-}
-.c-line :nth-of-type(3) {
-  transform: rotate(45deg);
 }
 @media screen and (min-width: 1162px) {
   .c-line {
