--- a/sass/object/component/_text.scss
+++ b/sass/object/component/_text.scss
@@ -29,6 +29,7 @@
         }
         @include m.mq(pc){
                 font-size: 40px;
+                padding: 7px 15px 0 120px;
         }
     }
     &--sub{
