--- a/sass/foundation/_base.scss
+++ b/sass/foundation/_base.scss
@@ -7,11 +7,11 @@
 
 
 html  {
-    height: 100vh;
+    // height: 100vh;
     width: 100%
 }
 body {
-    width: 100%;
+    // width: 100%;
     min-width:390px;
     min-height: 100%;
 
