--- a/sass/object/component/_line.scss
+++ b/sass/object/component/_line.scss
@@ -11,22 +11,23 @@
     display:block;
     position: relative;
     
-        .open :nth-of-type(1){
-            transform: rotate(-45deg);
-            }
-            :nth-child(2){
-            display: none;
-            }
-            :nth-of-type(3) {
-            transform: rotate(45deg);
-            }
-
-
-
-            @include m.mq(pc) {
+    &.open{
+        // &:nth-of-type(1){
+        //     transform: rotate();
+        //     }
+        // &:nth-of-type(2){
+        //     display: none;
+        //     }
+        // &:nth-of-type(3) {
+        //     transform: rotate(1turn);
+        //     }
+    }
+    
+                @include m.mq(pc) {
                 display: none;
-            
         }
+            
+
 
 
 }
