--- a/sass/object/project/_front.scss
+++ b/sass/object/project/_front.scss
@@ -19,6 +19,9 @@
             height: 301.44px;
             @include m.mq(tab) {
                         height: 350px;
+            @include m.mq(pc) {
+                        height: 500px;
+            }
     }
 }
 }
