--- a/sass/object/project/_menu.scss
+++ b/sass/object/project/_menu.scss
@@ -8,7 +8,7 @@
     right: -100%;
 
     &.open {
-        position:absolute;
+        // position:absolute;
         top: 10%;
         right: 8%;
         transition: all .6;
