--- a/css/style.css
+++ b/css/style.css
@@ -67,22 +67,37 @@ p {
 .p-front__title {
   display: flex;
   font-size: 24px;
-  padding: 20px;
+  padding: 3%;
+}
+@media screen and (min-width: 805px) {
+  .p-front__title {
+    font-size: 46px;
+  }
+}
+@media screen and (min-width: 1162px) {
+  .p-front__title {
+    font-size: 70px;
+  }
 }
 .p-front__top {
-  background-image: url(/img/top.png);
+  background-image: url(/img/top-sp.png);
   background-size: cover;
   background-position: center center;
+  width: 100%;
   height: 301.44px;
 }
 @media screen and (min-width: 805px) {
   .p-front__top {
+    background-image: url(/img/top-tab.png);
+    width: 100%;
     height: 350px;
   }
 }
-@media screen and (min-width: 805px) and (min-width: 1162px) {
+@media screen and (min-width: 1162px) {
   .p-front__top {
+    background-image: url(/img/top.png);
     height: 500px;
+    width: 100%;
   }
 }
 
@@ -94,6 +109,7 @@ p {
 
 .p-box {
   background-color: #D5EEFF;
+  padding: 0.8rem;
 }
 .p-box--news {
   padding: 0.6rem;
@@ -104,12 +120,14 @@ p {
   .p-box--news {
     height: 300px;
     width: 710px;
+    padding: 1rem;
   }
 }
 @media screen and (min-width: 805px) and (min-width: 1162px) {
   .p-box--news {
     height: 350px;
     width: 1200px;
+    padding: 3rem;
   }
 }
 .p-box--news__group {
@@ -132,6 +150,7 @@ p {
 }
 @media screen and (min-width: 805px) {
   .p-box--menu__open {
+    background-image: url(/img/open-tab.png);
     height: 308px;
     width: 710px;
   }
@@ -144,7 +163,7 @@ p {
   }
 }
 .p-box--menu__support {
-  background-image: url(/img/support.png);
+  background-image: url(/img/support-sp.png);
   background-size: cover;
   background-position: center center;
   height: 284.21px;
@@ -152,12 +171,14 @@ p {
 }
 @media screen and (min-width: 805px) {
   .p-box--menu__support {
+    background-image: url(/img/support-tab.png);
     height: 308px;
     width: 710px;
   }
 }
 @media screen and (min-width: 805px) and (min-width: 1162px) {
   .p-box--menu__support {
+    background-image: url(/img/support.png);
     height: 350px;
     width: 1200px;
   }
@@ -166,6 +187,7 @@ p {
 .p-footer {
   display: flex;
   color: #fff;
+  flex-direction: row-reverse;
 }
 
 .p-menu {
@@ -173,7 +195,6 @@ p {
   right: -100%;
 }
 .p-menu.open {
-  position: absolute;
   top: 10%;
   right: 8%;
   transition: all 0.6;
