--- a/sass/object/project/_front.scss
+++ b/sass/object/project/_front.scss
@@ -9,19 +9,32 @@
     &__title {
         display: flex;
         font-size: 24px;
-        padding: 20px;
+        padding: 3%;
+        @include m.mq(tab) {
+            font-size: 46px;
+        }
+        
+        @include m.mq(pc) {
+            font-size: 70px;
+        }
     }
 
     &__top  
-            {background-image: url(/img/top.png);
-            background-size: cover;
-            background-position: center center;
-            height: 301.44px;
-            @include m.mq(tab) {
-                        height: 350px;
-            @include m.mq(pc) {
-                        height: 500px;
-            }
-    }
+            {   background-image: url(/img/top-sp.png);
+                background-size: cover;
+                background-position: center center;
+                width: 100%;
+                height: 301.44px;
+                @include m.mq(tab) {
+                            background-image:  url(/img/top-tab.png);
+                            width: 100%;
+                            height: 350px;
+                        }
+                @include m.mq(pc) {
+                            background-image: url(/img/top.png);
+                            height: 500px;
+                            width: 100%;
+                }
+    
 }
 }
