--- a/sass/object/component/_position.scss
+++ b/sass/object/component/_position.scss
@@ -6,6 +6,7 @@
 
 
 .c-position {
+    @include m.mq(tab) {
     position:absolute;
     left: 50%;
     &__70 {
@@ -13,3 +14,4 @@
     }
 
     }
+}
