--- a/sass/style.scss
+++ b/sass/style.scss
@@ -30,9 +30,11 @@
 @use "object/component/button";
 @use "object/component/line";
 @use "object/component/position";
+@use "object/component/shadow";
 
 /*utility*/
 @use "object/utility/padding10";
 @use "object/utility/padding20";
 @use "object/utility/margin20";
 @use "object/utility/font-size";
+@use "object/utility/padding";
