--- a/css/style.css
+++ b/css/style.css
@@ -312,6 +312,10 @@ p {
   }
 }
 
+.c-shadow {
+  text-shadow: 2px 2px 0 #000;
+}
+
 .u-padding10 {
   padding: 10px;
 }
@@ -336,6 +340,23 @@ p {
   .u-font-size {
     font-size: 36px;
   }
+}
+.u-font-size__main {
+  font-size: 18px;
+}
+@media screen and (min-width: 805px) {
+  .u-font-size__main {
+    font-size: 36px;
+  }
+}
+@media screen and (min-width: 1162px) {
+  .u-font-size__main {
+    font-size: 42px;
+  }
+}
+
+.u-padding__5 {
+  padding: 5%;
 }
 
 /*Foundation*/
