--- a/sass/object/project/_front.scss
+++ b/sass/object/project/_front.scss
@@ -20,18 +20,18 @@
     }
 
     &__top  
-            {   background-image: url(/img/top-sp.png);
+            {   background-image: url(../img/top-sp.png);
                 background-size: cover;
                 background-position: center center;
                 width: 100%;
                 height: 301.44px;
                 @include m.mq(tab) {
-                            background-image:  url(/img/top-tab.png);
+                            background-image:  url(../img/top-tab.png);
                             width: 100%;
                             height: 350px;
                         }
                 @include m.mq(pc) {
-                            background-image: url(/img/top.png);
+                            background-image: url(../img/top.png);
                             height: 500px;
                             width: 100%;
                 }
