--- a/sass/object/project/_box.scss
+++ b/sass/object/project/_box.scss
@@ -5,7 +5,7 @@
 
 
 .p-box {
-    background-color: #D5EEFF;
+    background-color: #FFF;
     padding: 0.8rem;
     // @include m.mq(tab) {
 
@@ -41,19 +41,17 @@
         flex-direction: column;
         align-items: center;
         &__open{ 
-                // background-image: url(../img/open-sp.png);
+                background-image: url(../img/open-sp.png);
                 background-size: cover;
                 background-position: center center;
                 height: 284.21px;
                 width: 85%;
                 @include m.mq(tab) {
-                    // background-image: url(../img/open-tab.png);
+                    background-image: url(../img/open-tab.png);
                     height: 308px;
-                    // width: 710px;
                     @include m.mq(pc) {
-                        // background-image: url(../img/open.png);
+                        background-image: url(../img/open.png);
                         height: 350px;
-                        // width: 1200px;
                 }
                 }
         }
@@ -74,6 +72,20 @@
                 }
                 }
         }
+        &__single {
+            background-image: url(../img/Contact-sp.png);
+            background-size: cover;
+            background-position: center center;
+            height: 284.21px;
+            width: 85%;
+            @include m.mq(tab) {
+                background-image: url(../img/Contact-tab.png);
+                height: 308px;
+                @include m.mq(pc) {
+                    background-image: url(../img/Contact-pc.png);
+                    height: 350px;
+            }
+        }
     }
     &--text {
         padding: 0.6rem;
@@ -88,4 +100,4 @@
                 padding: 3rem;
         }
 }
-}
+}}
