--- a/sass/style.scss
+++ b/sass/style.scss
@@ -38,3 +38,4 @@
 @use "object/utility/margin20";
 @use "object/utility/font-size";
 @use "object/utility/padding";
+@use "object/utility/_thumbnail.scss";
