--- a/css/style.css
+++ b/css/style.css
@@ -381,6 +381,13 @@ p {
   padding: 5%;
 }
 
+.u-thumbnail {
+  width: auto;
+  height: auto;
+  max-width: 100%;
+  max-height: 100%;
+}
+
 /*Foundation*/
 /*layout*/
 /*object*/
