--- a/css/style.css
+++ b/css/style.css
@@ -215,6 +215,7 @@ p {
   display: flex;
   color: #fff;
   align-items: center;
+  flex-direction: column-reverse;
 }
 
 .p-menu {
@@ -248,6 +249,30 @@ p {
 
 main ul li div.whatsnew dl dt {
   width: auto;
+}
+
+footer ul li a {
+  color: #fff;
+}
+
+footer .menu {
+  display: flex;
+  flex-direction: column;
+}
+@media screen and (min-width: 805px) {
+  footer .menu {
+    flex-direction: row;
+  }
+}
+footer .menu li {
+  padding: 2px 2px 2px 2px;
+  white-space: nowrap;
+  text-align: center;
+}
+@media screen and (min-width: 805px) {
+  footer .menu li {
+    padding: 2px 10px 2px 10px;
+  }
 }
 
 .p-info .div .whatsnew .dt {
